Changed link structure and templates
Changed link structure;
Returned slashes in urls;
Updated templates, now they're all connected;
Updated sign_out_view for overall structure;

--- a/SunriseJunior/templates/users/confirm_email.html
+++ b/SunriseJunior/templates/users/confirm_email.html
@@ -5,6 +5,7 @@
     <title>Confirm your email</title>
 </head>
 <body>
-    Please confirm your email address to complete the application
+Please confirm your email address to complete the application.
+<a href="../">Back to Main Page</a> <a href="../signin">Sign In</a>
 </body>
 </html>
