--- a/SunriseJunior/templates/products/categories.html
+++ b/SunriseJunior/templates/products/categories.html
@@ -5,6 +5,7 @@
     <title>Categories</title>
 </head>
 <body>
+<header><a href="../signin">Sign In</a> <a href="../signup">Sign Up</a></header>
 <h2>Categories</h2>
 {% for category in categories %}
     <li>
