--- a/SunriseJunior/templates/products/product_detail.html
+++ b/SunriseJunior/templates/products/product_detail.html
@@ -5,8 +5,10 @@
     <title>{{ product.name }}</title>
 </head>
 <body>
+<header><a href="../signin">Sign In</a> <a href="../signup">Sign Up</a></header>
 <h2>{{ product.name }}</h2>
 <p>Category: {{ product.subcategory.name }}</p>
 <p>Description: {{ product.description }}</p>
+<a href="../">Back to categories</a>
 </body>
 </html>
