--- a/SunriseJunior/templates/products/product_list.html
+++ b/SunriseJunior/templates/products/product_list.html
@@ -5,11 +5,12 @@
     <title>Products</title>
 </head>
 <body>
+<header><a href="../signin">Sign In</a> <a href="../signup">Sign Up</a></header>
 <h2>Products</h2>
 {% for product in products %}
 <li><a href="products/{{ product.id }}">{{ product.name }}</a></li>
 {% endfor %}
 <br>
-<a href="categories">Back to categories</a>
+<a href="../">Back to categories</a>
 </body>
 </html>
