--- a/SunriseJunior/templates/users/sign_in.html
+++ b/SunriseJunior/templates/users/sign_in.html
@@ -8,8 +8,9 @@
     <form method="post">
         {% csrf_token %}
         <input type="text" id="email" name="email">
-        <input type="text" id="password" name="password">
+        <input type="password" id="password" name="password">
         <input type="submit" class="btn btn-default btn-lg" value="Sign In" />
     </form>
+<a href="../">Back to Main Page</a>
 </body>
 </html>
