--- a/SunriseJunior/templates/users/sign_up.html
+++ b/SunriseJunior/templates/users/sign_up.html
@@ -22,5 +22,6 @@
         {% endfor %}
     </ul>
     {% endif %}
+<a href="../">Back to Main Page</a> <a href="../signin">Sign In</a>
 </body>
 </html>
