--- a/SunriseJunior/templates/users/user_profile.html
+++ b/SunriseJunior/templates/users/user_profile.html
@@ -10,6 +10,7 @@
         <input type="text" id="last_name"  placeholder="{{ user.last_name }}">
         <a data-callback='onSubmit' id="button" data-action='submit' href="">Update</a>
     </form>
+<a href="../">Back to Main Page</a> <a href="../signout">Sign Out</a>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script type="text/javascript">
